--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "~1.13.2",
+    "cheerio": "^0.19.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -15,6 +16,7 @@
     "lodash": "^4.0.0",
     "mongoose": "^4.3.6",
     "morgan": "~1.6.1",
+    "q": "^1.4.1",
     "serve-favicon": "~2.3.0"
   }
 }
